[gd_scene load_steps=3 format=3 uid="uid://euthq0sc4lsx"]

[ext_resource type="Script" path="res://Megan WIP/ToBeDeleted/Party.gd" id="1_0auq1"]
[ext_resource type="PackedScene" uid="uid://cxnhaqggcn6a2" path="res://Scenes/DefaultUnit/player_unit.tscn" id="3_e4eir"]

[node name="Party" type="Node2D"]
script = ExtResource("1_0auq1")

[node name="Character1" type="Node2D" parent="."]

[node name="PlayerUnit" parent="Character1" instance=ExtResource("3_e4eir")]

[node name="Character2" type="Node2D" parent="."]
position = Vector2(0, 45)

[node name="PlayerUnit" parent="Character2" instance=ExtResource("3_e4eir")]

[node name="Character3" type="Node2D" parent="."]
position = Vector2(0, 90)

[node name="PlayerUnit" parent="Character3" instance=ExtResource("3_e4eir")]

[node name="Character4" type="Node2D" parent="."]
position = Vector2(0, 135)

[node name="PlayerUnit" parent="Character4" instance=ExtResource("3_e4eir")]
